Resolves: tdf#30920 don't terminate app on closing license frame

when there is a backing window (start center) also open

Change-Id: I64051467ac90ee321b7fc54cb96775c5a1e8d3a5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147078
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>